y.output
Terminales no usados en la gramática

   TK_CADENA


Estado 123 conflictos: 1 reducción/reducción
Estado 176 conflictos: 1 reducción/reducción
Estado 177 conflictos: 1 reducción/reducción


Gramática

    0 $accept: ty_desc_algoritmo $end

    1 ty_desc_algoritmo: TK_PR_ALGORITMO TK_IDENTIFICADOR TK_PUNTOYCOMA ty_cabecera_alg ty_bloque_alg TK_PR_FALGORITMO

    2 ty_cabecera_alg: ty_decl_globales ty_decl_a_f ty_decl_ent_sal TK_COMENTARIO

    3 ty_bloque_alg: ty_bloque TK_COMENTARIO

    4 ty_decl_globales: ty_decl_tipo ty_decl_globales
    5                 | ty_decl_cte ty_decl_globales
    6                 | %empty

    7 ty_decl_a_f: ty_accion_d ty_decl_a_f
    8            | ty_funcion_d ty_decl_a_f
    9            | %empty

   10 ty_bloque: ty_declaraciones ty_instrucciones

   11 ty_declaraciones: ty_decl_tipo ty_declaraciones
   12                 | ty_decl_cte ty_declaraciones
   13                 | ty_decl_var ty_declaraciones
   14                 | %empty

   15 ty_decl_tipo: TK_PR_TIPO ty_lista_d_tipo TK_PR_FTIPO TK_PUNTOYCOMA

   16 ty_decl_cte: TK_PR_CONST ty_lista_d_cte TK_PR_FCONST TK_PUNTOYCOMA

   17 ty_decl_var: TK_PR_VAR ty_lista_d_var TK_PR_FVAR TK_PUNTOYCOMA

   18 ty_lista_d_tipo: TK_IDENTIFICADOR TK_IGUAL ty_d_tipo TK_PUNTOYCOMA ty_lista_d_tipo
   19                | %empty

   20 ty_d_tipo: TK_PR_TUPLA ty_lista_campos TK_PR_FTUPLA
   21          | TK_PR_TABLA TK_INICIO_ARRAY ty_expresion_t TK_SUBRANGO ty_expresion_t TK_FIN_ARRAY TK_PR_DE ty_d_tipo
   22          | TK_IDENTIFICADOR
   23          | ty_expresion_t TK_SUBRANGO ty_expresion_t
   24          | TK_PR_REF ty_d_tipo
   25          | ty_tipo_base

   26 ty_expresion_t: ty_expresion
   27               | TK_CARACTER

   28 ty_lista_campos: TK_IDENTIFICADOR TK_TIPO_VAR ty_d_tipo TK_PUNTOYCOMA ty_lista_campos
   29                | %empty

   30 ty_tipo_base: TK_PR_BOOLEANO
   31             | TK_PR_ENTERO
   32             | TK_PR_CARACTER
   33             | TK_PR_REAL
   34             | TK_PR_CADENA

   35 ty_lista_d_cte: TK_IDENTIFICADOR TK_IGUAL ty_tipo_base TK_PUNTOYCOMA ty_lista_d_cte
   36               | %empty

   37 ty_lista_d_var: ty_lista_id TK_TIPO_VAR ty_d_tipo TK_PUNTOYCOMA ty_lista_d_var
   38               | %empty

   39 ty_lista_id: TK_IDENTIFICADOR TK_SEPARADOR ty_lista_id
   40            | TK_IDENTIFICADOR

   41 ty_decl_ent_sal: ty_decl_ent
   42                | ty_decl_ent ty_decl_sal
   43                | ty_decl_sal

   44 ty_decl_ent: TK_PR_ENT ty_lista_d_var

   45 ty_decl_sal: TK_PR_SAL ty_lista_d_var

   46 ty_expresion: ty_exp_a
   47             | ty_exp_b
   48             | ty_funcion_ll

   49 ty_exp_a: ty_exp_a TK_MAS ty_exp_a
   50         | ty_exp_a TK_MENOS ty_exp_a
   51         | ty_exp_a TK_MULT ty_exp_a
   52         | ty_exp_a TK_DIV ty_exp_a
   53         | ty_exp_a TK_MOD ty_exp_a
   54         | ty_exp_a TK_DIV_ENT ty_exp_a
   55         | TK_PARENTESIS_INICIAL ty_exp_a TK_PARENTESIS_FINAL
   56         | ty_operando
   57         | TK_ENTERO
   58         | TK_REAL
   59         | TK_MENOS ty_exp_a

   60 ty_exp_b: ty_exp_b TK_PR_Y ty_exp_b
   61         | ty_exp_b TK_PR_O ty_exp_b
   62         | TK_PR_NO ty_exp_b
   63         | TK_BOOLEANO
   64         | ty_expresion TK_OP_RELACIONAL ty_expresion
   65         | TK_PARENTESIS_INICIAL ty_exp_b TK_PARENTESIS_FINAL

   66 ty_operando: TK_IDENTIFICADOR
   67            | ty_operando TK_PUNTO ty_operando
   68            | ty_operando TK_INICIO_ARRAY ty_expresion TK_FIN_ARRAY
   69            | ty_operando TK_PR_REF

   70 ty_instrucciones: ty_instruccion TK_PUNTOYCOMA ty_instrucciones
   71                 | ty_instruccion

   72 ty_instruccion: TK_PR_CONTINUAR
   73               | ty_asignacion
   74               | ty_alternativa
   75               | ty_iteracion
   76               | ty_accion_ll

   77 ty_asignacion: ty_operando TK_ASIGNACION ty_expresion_t

   78 ty_alternativa: TK_PR_SI ty_expresion TK_ENTONCES ty_instrucciones ty_lista_opciones TK_PR_FSI

   79 ty_lista_opciones: TK_SINOSI ty_expresion TK_ENTONCES ty_instrucciones ty_lista_opciones
   80                  | %empty

   81 ty_iteracion: ty_it_cota_fija
   82             | ty_it_cota_exp

   83 ty_it_cota_exp: TK_PR_MIENTRAS ty_expresion TK_PR_HACER ty_instrucciones TK_PR_FMIENTRAS

   84 ty_it_cota_fija: TK_PR_PARA TK_IDENTIFICADOR TK_ASIGNACION ty_expresion TK_PR_HASTA ty_expresion TK_PR_HACER ty_instrucciones TK_PR_FPARA

   85 ty_accion_d: TK_PR_ACCION ty_a_cabecera ty_bloque TK_PR_FACCION

   86 ty_funcion_d: TK_PR_FUNCION ty_f_cabecera ty_bloque TK_PR_DEV ty_expresion TK_PR_FFUNCION

   87 ty_a_cabecera: TK_IDENTIFICADOR TK_PARENTESIS_INICIAL ty_d_par_form TK_PARENTESIS_FINAL TK_PUNTOYCOMA

   88 ty_f_cabecera: TK_IDENTIFICADOR TK_PARENTESIS_INICIAL ty_lista_d_var TK_PARENTESIS_FINAL TK_PR_DEV ty_d_tipo TK_PUNTOYCOMA

   89 ty_d_par_form: ty_d_p_form TK_PUNTOYCOMA ty_d_par_form
   90              | %empty

   91 ty_d_p_form: TK_PR_ENT ty_lista_id TK_TIPO_VAR ty_d_tipo
   92            | TK_PR_SAL ty_lista_id TK_TIPO_VAR ty_d_tipo
   93            | TK_PR_ES ty_lista_id TK_TIPO_VAR ty_d_tipo

   94 ty_accion_ll: TK_IDENTIFICADOR TK_PARENTESIS_INICIAL ty_l_ll TK_PARENTESIS_FINAL

   95 ty_funcion_ll: TK_IDENTIFICADOR TK_PARENTESIS_INICIAL ty_l_ll TK_PARENTESIS_FINAL

   96 ty_l_ll: ty_expresion TK_SEPARADOR ty_l_ll
   97        | ty_expresion


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
TK_PARENTESIS_INICIAL (258) 55 65 87 88 94 95
TK_PARENTESIS_FINAL (259) 55 65 87 88 94 95
TK_IGUAL (260) 18 35
TK_ASIGNACION (261) 77 84
TK_PUNTOYCOMA (262) 1 15 16 17 18 28 35 37 70 87 88 89
TK_SEPARADOR (263) 39 96
TK_SUBRANGO (264) 21 23
TK_TIPO_VAR (265) 28 37 91 92 93
TK_ENTONCES (266) 78 79
TK_SINOSI (267) 79
TK_FIN_ARRAY (268) 21 68
TK_PR_ACCION (269) 85
TK_PR_ALGORITMO (270) 1
TK_PR_BOOLEANO (271) 30
TK_PR_CADENA (272) 34
TK_PR_CARACTER (273) 32
TK_PR_CONST (274) 16
TK_PR_CONTINUAR (275) 72
TK_PR_DE (276) 21
TK_PR_DEV (277) 86 88
TK_PR_ENT (278) 44 91
TK_PR_ENTERO (279) 31
TK_PR_ES (280) 93
TK_PR_FACCION (281) 85
TK_PR_FALGORITMO (282) 1
TK_PR_FCONST (283) 16
TK_PR_FFUNCION (284) 86
TK_PR_FMIENTRAS (285) 83
TK_PR_FPARA (286) 84
TK_PR_FSI (287) 78
TK_PR_FTIPO (288) 15
TK_PR_FTUPLA (289) 20
TK_PR_FUNCION (290) 86
TK_PR_FVAR (291) 17
TK_PR_HACER (292) 83 84
TK_PR_HASTA (293) 84
TK_PR_MIENTRAS (294) 83
TK_PR_PARA (295) 84
TK_PR_REAL (296) 33
TK_PR_SAL (297) 45 92
TK_PR_SI (298) 78
TK_PR_TABLA (299) 21
TK_PR_TIPO (300) 15
TK_PR_TUPLA (301) 20
TK_PR_VAR (302) 17
TK_COMENTARIO (303) 2 3
TK_CADENA (304)
TK_CARACTER (305) 27
TK_IDENTIFICADOR (306) 1 18 22 28 35 39 40 66 84 87 88 94 95
TK_ENTERO (307) 57
TK_REAL (308) 58
TK_BOOLEANO (309) 63
TK_NADA_PRIORITARIO (310)
TK_PR_O (311) 61
TK_PR_Y (312) 60
TK_OP_RELACIONAL (313) 64
TK_PR_NO (314) 62
TK_MAS (315) 49
TK_MENOS (316) 50 59
TK_MULT (317) 51
TK_DIV (318) 52
TK_DIV_ENT (319) 54
TK_MOD (320) 53
TK_MENOS_U (321)
TK_INICIO_ARRAY (322) 21 68
TK_PUNTO (323) 67
TK_PR_REF (324) 24 69
TK_MUY_PRIORITARIO (325)


No terminales con las reglas donde aparecen

$accept (71)
    en la izquierda: 0
ty_desc_algoritmo (72)
    en la izquierda: 1, en la derecha: 0
ty_cabecera_alg (73)
    en la izquierda: 2, en la derecha: 1
ty_bloque_alg (74)
    en la izquierda: 3, en la derecha: 1
ty_decl_globales (75)
    en la izquierda: 4 5 6, en la derecha: 2 4 5
ty_decl_a_f (76)
    en la izquierda: 7 8 9, en la derecha: 2 7 8
ty_bloque (77)
    en la izquierda: 10, en la derecha: 3 85 86
ty_declaraciones (78)
    en la izquierda: 11 12 13 14, en la derecha: 10 11 12 13
ty_decl_tipo (79)
    en la izquierda: 15, en la derecha: 4 11
ty_decl_cte (80)
    en la izquierda: 16, en la derecha: 5 12
ty_decl_var (81)
    en la izquierda: 17, en la derecha: 13
ty_lista_d_tipo (82)
    en la izquierda: 18 19, en la derecha: 15 18
ty_d_tipo (83)
    en la izquierda: 20 21 22 23 24 25, en la derecha: 18 21 24 28
    37 88 91 92 93
ty_expresion_t (84)
    en la izquierda: 26 27, en la derecha: 21 23 77
ty_lista_campos (85)
    en la izquierda: 28 29, en la derecha: 20 28
ty_tipo_base (86)
    en la izquierda: 30 31 32 33 34, en la derecha: 25 35
ty_lista_d_cte (87)
    en la izquierda: 35 36, en la derecha: 16 35
ty_lista_d_var (88)
    en la izquierda: 37 38, en la derecha: 17 37 44 45 88
ty_lista_id (89)
    en la izquierda: 39 40, en la derecha: 37 39 91 92 93
ty_decl_ent_sal (90)
    en la izquierda: 41 42 43, en la derecha: 2
ty_decl_ent (91)
    en la izquierda: 44, en la derecha: 41 42
ty_decl_sal (92)
    en la izquierda: 45, en la derecha: 42 43
ty_expresion (93)
    en la izquierda: 46 47 48, en la derecha: 26 64 68 78 79 83 84
    86 96 97
ty_exp_a (94)
    en la izquierda: 49 50 51 52 53 54 55 56 57 58 59, en la derecha:
    46 49 50 51 52 53 54 55 59
ty_exp_b (95)
    en la izquierda: 60 61 62 63 64 65, en la derecha: 47 60 61 62
    65
ty_operando (96)
    en la izquierda: 66 67 68 69, en la derecha: 56 67 68 69 77
ty_instrucciones (97)
    en la izquierda: 70 71, en la derecha: 10 70 78 79 83 84
ty_instruccion (98)
    en la izquierda: 72 73 74 75 76, en la derecha: 70 71
ty_asignacion (99)
    en la izquierda: 77, en la derecha: 73
ty_alternativa (100)
    en la izquierda: 78, en la derecha: 74
ty_lista_opciones (101)
    en la izquierda: 79 80, en la derecha: 78 79
ty_iteracion (102)
    en la izquierda: 81 82, en la derecha: 75
ty_it_cota_exp (103)
    en la izquierda: 83, en la derecha: 82
ty_it_cota_fija (104)
    en la izquierda: 84, en la derecha: 81
ty_accion_d (105)
    en la izquierda: 85, en la derecha: 7
ty_funcion_d (106)
    en la izquierda: 86, en la derecha: 8
ty_a_cabecera (107)
    en la izquierda: 87, en la derecha: 85
ty_f_cabecera (108)
    en la izquierda: 88, en la derecha: 86
ty_d_par_form (109)
    en la izquierda: 89 90, en la derecha: 87 89
ty_d_p_form (110)
    en la izquierda: 91 92 93, en la derecha: 89
ty_accion_ll (111)
    en la izquierda: 94, en la derecha: 76
ty_funcion_ll (112)
    en la izquierda: 95, en la derecha: 48
ty_l_ll (113)
    en la izquierda: 96 97, en la derecha: 94 95 96


Estado 0

    0 $accept: . ty_desc_algoritmo $end

    TK_PR_ALGORITMO  desplazar e ir al estado 1

    ty_desc_algoritmo  ir al estado 2


Estado 1

    1 ty_desc_algoritmo: TK_PR_ALGORITMO . TK_IDENTIFICADOR TK_PUNTOYCOMA ty_cabecera_alg ty_bloque_alg TK_PR_FALGORITMO

    TK_IDENTIFICADOR  desplazar e ir al estado 3


Estado 2

    0 $accept: ty_desc_algoritmo . $end

    $end  desplazar e ir al estado 4


Estado 3

    1 ty_desc_algoritmo: TK_PR_ALGORITMO TK_IDENTIFICADOR . TK_PUNTOYCOMA ty_cabecera_alg ty_bloque_alg TK_PR_FALGORITMO

    TK_PUNTOYCOMA  desplazar e ir al estado 5


Estado 4

    0 $accept: ty_desc_algoritmo $end .

    $default  aceptar


Estado 5

    1 ty_desc_algoritmo: TK_PR_ALGORITMO TK_IDENTIFICADOR TK_PUNTOYCOMA . ty_cabecera_alg ty_bloque_alg TK_PR_FALGORITMO

    TK_PR_CONST  desplazar e ir al estado 6
    TK_PR_TIPO   desplazar e ir al estado 7

    $default  reduce usando la regla 6 (ty_decl_globales)

    ty_cabecera_alg   ir al estado 8
    ty_decl_globales  ir al estado 9
    ty_decl_tipo      ir al estado 10
    ty_decl_cte       ir al estado 11


Estado 6

   16 ty_decl_cte: TK_PR_CONST . ty_lista_d_cte TK_PR_FCONST TK_PUNTOYCOMA

    TK_IDENTIFICADOR  desplazar e ir al estado 12

    $default  reduce usando la regla 36 (ty_lista_d_cte)

    ty_lista_d_cte  ir al estado 13


Estado 7

   15 ty_decl_tipo: TK_PR_TIPO . ty_lista_d_tipo TK_PR_FTIPO TK_PUNTOYCOMA

    TK_IDENTIFICADOR  desplazar e ir al estado 14

    $default  reduce usando la regla 19 (ty_lista_d_tipo)

    ty_lista_d_tipo  ir al estado 15


Estado 8

    1 ty_desc_algoritmo: TK_PR_ALGORITMO TK_IDENTIFICADOR TK_PUNTOYCOMA ty_cabecera_alg . ty_bloque_alg TK_PR_FALGORITMO

    TK_PR_CONST  desplazar e ir al estado 6
    TK_PR_TIPO   desplazar e ir al estado 7
    TK_PR_VAR    desplazar e ir al estado 16

    $default  reduce usando la regla 14 (ty_declaraciones)

    ty_bloque_alg     ir al estado 17
    ty_bloque         ir al estado 18
    ty_declaraciones  ir al estado 19
    ty_decl_tipo      ir al estado 20
    ty_decl_cte       ir al estado 21
    ty_decl_var       ir al estado 22


Estado 9

    2 ty_cabecera_alg: ty_decl_globales . ty_decl_a_f ty_decl_ent_sal TK_COMENTARIO

    TK_PR_ACCION   desplazar e ir al estado 23
    TK_PR_FUNCION  desplazar e ir al estado 24

    $default  reduce usando la regla 9 (ty_decl_a_f)

    ty_decl_a_f   ir al estado 25
    ty_accion_d   ir al estado 26
    ty_funcion_d  ir al estado 27


Estado 10

    4 ty_decl_globales: ty_decl_tipo . ty_decl_globales

    TK_PR_CONST  desplazar e ir al estado 6
    TK_PR_TIPO   desplazar e ir al estado 7

    $default  reduce usando la regla 6 (ty_decl_globales)

    ty_decl_globales  ir al estado 28
    ty_decl_tipo      ir al estado 10
    ty_decl_cte       ir al estado 11


Estado 11

    5 ty_decl_globales: ty_decl_cte . ty_decl_globales

    TK_PR_CONST  desplazar e ir al estado 6
    TK_PR_TIPO   desplazar e ir al estado 7

    $default  reduce usando la regla 6 (ty_decl_globales)

    ty_decl_globales  ir al estado 29
    ty_decl_tipo      ir al estado 10
    ty_decl_cte       ir al estado 11


Estado 12

   35 ty_lista_d_cte: TK_IDENTIFICADOR . TK_IGUAL ty_tipo_base TK_PUNTOYCOMA ty_lista_d_cte

    TK_IGUAL  desplazar e ir al estado 30


Estado 13

   16 ty_decl_cte: TK_PR_CONST ty_lista_d_cte . TK_PR_FCONST TK_PUNTOYCOMA

    TK_PR_FCONST  desplazar e ir al estado 31


Estado 14

   18 ty_lista_d_tipo: TK_IDENTIFICADOR . TK_IGUAL ty_d_tipo TK_PUNTOYCOMA ty_lista_d_tipo

    TK_IGUAL  desplazar e ir al estado 32


Estado 15

   15 ty_decl_tipo: TK_PR_TIPO ty_lista_d_tipo . TK_PR_FTIPO TK_PUNTOYCOMA

    TK_PR_FTIPO  desplazar e ir al estado 33


Estado 16

   17 ty_decl_var: TK_PR_VAR . ty_lista_d_var TK_PR_FVAR TK_PUNTOYCOMA

    TK_IDENTIFICADOR  desplazar e ir al estado 34

    $default  reduce usando la regla 38 (ty_lista_d_var)

    ty_lista_d_var  ir al estado 35
    ty_lista_id     ir al estado 36


Estado 17

    1 ty_desc_algoritmo: TK_PR_ALGORITMO TK_IDENTIFICADOR TK_PUNTOYCOMA ty_cabecera_alg ty_bloque_alg . TK_PR_FALGORITMO

    TK_PR_FALGORITMO  desplazar e ir al estado 37


Estado 18

    3 ty_bloque_alg: ty_bloque . TK_COMENTARIO

    TK_COMENTARIO  desplazar e ir al estado 38


Estado 19

   10 ty_bloque: ty_declaraciones . ty_instrucciones

    TK_PR_CONTINUAR   desplazar e ir al estado 39
    TK_PR_MIENTRAS    desplazar e ir al estado 40
    TK_PR_PARA        desplazar e ir al estado 41
    TK_PR_SI          desplazar e ir al estado 42
    TK_IDENTIFICADOR  desplazar e ir al estado 43

    ty_operando       ir al estado 44
    ty_instrucciones  ir al estado 45
    ty_instruccion    ir al estado 46
    ty_asignacion     ir al estado 47
    ty_alternativa    ir al estado 48
    ty_iteracion      ir al estado 49
    ty_it_cota_exp    ir al estado 50
    ty_it_cota_fija   ir al estado 51
    ty_accion_ll      ir al estado 52


Estado 20

   11 ty_declaraciones: ty_decl_tipo . ty_declaraciones

    TK_PR_CONST  desplazar e ir al estado 6
    TK_PR_TIPO   desplazar e ir al estado 7
    TK_PR_VAR    desplazar e ir al estado 16

    $default  reduce usando la regla 14 (ty_declaraciones)

    ty_declaraciones  ir al estado 53
    ty_decl_tipo      ir al estado 20
    ty_decl_cte       ir al estado 21
    ty_decl_var       ir al estado 22


Estado 21

   12 ty_declaraciones: ty_decl_cte . ty_declaraciones

    TK_PR_CONST  desplazar e ir al estado 6
    TK_PR_TIPO   desplazar e ir al estado 7
    TK_PR_VAR    desplazar e ir al estado 16

    $default  reduce usando la regla 14 (ty_declaraciones)

    ty_declaraciones  ir al estado 54
    ty_decl_tipo      ir al estado 20
    ty_decl_cte       ir al estado 21
    ty_decl_var       ir al estado 22


Estado 22

   13 ty_declaraciones: ty_decl_var . ty_declaraciones

    TK_PR_CONST  desplazar e ir al estado 6
    TK_PR_TIPO   desplazar e ir al estado 7
    TK_PR_VAR    desplazar e ir al estado 16

    $default  reduce usando la regla 14 (ty_declaraciones)

    ty_declaraciones  ir al estado 55
    ty_decl_tipo      ir al estado 20
    ty_decl_cte       ir al estado 21
    ty_decl_var       ir al estado 22


Estado 23

   85 ty_accion_d: TK_PR_ACCION . ty_a_cabecera ty_bloque TK_PR_FACCION

    TK_IDENTIFICADOR  desplazar e ir al estado 56

    ty_a_cabecera  ir al estado 57


Estado 24

   86 ty_funcion_d: TK_PR_FUNCION . ty_f_cabecera ty_bloque TK_PR_DEV ty_expresion TK_PR_FFUNCION

    TK_IDENTIFICADOR  desplazar e ir al estado 58

    ty_f_cabecera  ir al estado 59


Estado 25

    2 ty_cabecera_alg: ty_decl_globales ty_decl_a_f . ty_decl_ent_sal TK_COMENTARIO

    TK_PR_ENT  desplazar e ir al estado 60
    TK_PR_SAL  desplazar e ir al estado 61

    ty_decl_ent_sal  ir al estado 62
    ty_decl_ent      ir al estado 63
    ty_decl_sal      ir al estado 64


Estado 26

    7 ty_decl_a_f: ty_accion_d . ty_decl_a_f

    TK_PR_ACCION   desplazar e ir al estado 23
    TK_PR_FUNCION  desplazar e ir al estado 24

    $default  reduce usando la regla 9 (ty_decl_a_f)

    ty_decl_a_f   ir al estado 65
    ty_accion_d   ir al estado 26
    ty_funcion_d  ir al estado 27


Estado 27

    8 ty_decl_a_f: ty_funcion_d . ty_decl_a_f

    TK_PR_ACCION   desplazar e ir al estado 23
    TK_PR_FUNCION  desplazar e ir al estado 24

    $default  reduce usando la regla 9 (ty_decl_a_f)

    ty_decl_a_f   ir al estado 66
    ty_accion_d   ir al estado 26
    ty_funcion_d  ir al estado 27


Estado 28

    4 ty_decl_globales: ty_decl_tipo ty_decl_globales .

    $default  reduce usando la regla 4 (ty_decl_globales)


Estado 29

    5 ty_decl_globales: ty_decl_cte ty_decl_globales .

    $default  reduce usando la regla 5 (ty_decl_globales)


Estado 30

   35 ty_lista_d_cte: TK_IDENTIFICADOR TK_IGUAL . ty_tipo_base TK_PUNTOYCOMA ty_lista_d_cte

    TK_PR_BOOLEANO  desplazar e ir al estado 67
    TK_PR_CADENA    desplazar e ir al estado 68
    TK_PR_CARACTER  desplazar e ir al estado 69
    TK_PR_ENTERO    desplazar e ir al estado 70
    TK_PR_REAL      desplazar e ir al estado 71

    ty_tipo_base  ir al estado 72


Estado 31

   16 ty_decl_cte: TK_PR_CONST ty_lista_d_cte TK_PR_FCONST . TK_PUNTOYCOMA

    TK_PUNTOYCOMA  desplazar e ir al estado 73


Estado 32

   18 ty_lista_d_tipo: TK_IDENTIFICADOR TK_IGUAL . ty_d_tipo TK_PUNTOYCOMA ty_lista_d_tipo

    TK_PARENTESIS_INICIAL  desplazar e ir al estado 74
    TK_PR_BOOLEANO         desplazar e ir al estado 67
    TK_PR_CADENA           desplazar e ir al estado 68
    TK_PR_CARACTER         desplazar e ir al estado 69
    TK_PR_ENTERO           desplazar e ir al estado 70
    TK_PR_REAL             desplazar e ir al estado 71
    TK_PR_TABLA            desplazar e ir al estado 75
    TK_PR_TUPLA            desplazar e ir al estado 76
    TK_CARACTER            desplazar e ir al estado 77
    TK_IDENTIFICADOR       desplazar e ir al estado 78
    TK_ENTERO              desplazar e ir al estado 79
    TK_REAL                desplazar e ir al estado 80
    TK_BOOLEANO            desplazar e ir al estado 81
    TK_PR_NO               desplazar e ir al estado 82
    TK_MENOS               desplazar e ir al estado 83
    TK_PR_REF              desplazar e ir al estado 84

    ty_d_tipo       ir al estado 85
    ty_expresion_t  ir al estado 86
    ty_tipo_base    ir al estado 87
    ty_expresion    ir al estado 88
    ty_exp_a        ir al estado 89
    ty_exp_b        ir al estado 90
    ty_operando     ir al estado 91
    ty_funcion_ll   ir al estado 92


Estado 33

   15 ty_decl_tipo: TK_PR_TIPO ty_lista_d_tipo TK_PR_FTIPO . TK_PUNTOYCOMA

    TK_PUNTOYCOMA  desplazar e ir al estado 93


Estado 34

   39 ty_lista_id: TK_IDENTIFICADOR . TK_SEPARADOR ty_lista_id
   40            | TK_IDENTIFICADOR .

    TK_SEPARADOR  desplazar e ir al estado 94

    $default  reduce usando la regla 40 (ty_lista_id)


Estado 35

   17 ty_decl_var: TK_PR_VAR ty_lista_d_var . TK_PR_FVAR TK_PUNTOYCOMA

    TK_PR_FVAR  desplazar e ir al estado 95


Estado 36

   37 ty_lista_d_var: ty_lista_id . TK_TIPO_VAR ty_d_tipo TK_PUNTOYCOMA ty_lista_d_var

    TK_TIPO_VAR  desplazar e ir al estado 96


Estado 37

    1 ty_desc_algoritmo: TK_PR_ALGORITMO TK_IDENTIFICADOR TK_PUNTOYCOMA ty_cabecera_alg ty_bloque_alg TK_PR_FALGORITMO .

    $default  reduce usando la regla 1 (ty_desc_algoritmo)


Estado 38

    3 ty_bloque_alg: ty_bloque TK_COMENTARIO .

    $default  reduce usando la regla 3 (ty_bloque_alg)


Estado 39

   72 ty_instruccion: TK_PR_CONTINUAR .

    $default  reduce usando la regla 72 (ty_instruccion)


Estado 40

   83 ty_it_cota_exp: TK_PR_MIENTRAS . ty_expresion TK_PR_HACER ty_instrucciones TK_PR_FMIENTRAS

    TK_PARENTESIS_INICIAL  desplazar e ir al estado 74
    TK_IDENTIFICADOR       desplazar e ir al estado 97
    TK_ENTERO              desplazar e ir al estado 79
    TK_REAL                desplazar e ir al estado 80
    TK_BOOLEANO            desplazar e ir al estado 81
    TK_PR_NO               desplazar e ir al estado 82
    TK_MENOS               desplazar e ir al estado 83

    ty_expresion   ir al estado 98
    ty_exp_a       ir al estado 89
    ty_exp_b       ir al estado 90
    ty_operando    ir al estado 91
    ty_funcion_ll  ir al estado 92


Estado 41

   84 ty_it_cota_fija: TK_PR_PARA . TK_IDENTIFICADOR TK_ASIGNACION ty_expresion TK_PR_HASTA ty_expresion TK_PR_HACER ty_instrucciones TK_PR_FPARA

    TK_IDENTIFICADOR  desplazar e ir al estado 99


Estado 42

   78 ty_alternativa: TK_PR_SI . ty_expresion TK_ENTONCES ty_instrucciones ty_lista_opciones TK_PR_FSI

    TK_PARENTESIS_INICIAL  desplazar e ir al estado 74
    TK_IDENTIFICADOR       desplazar e ir al estado 97
    TK_ENTERO              desplazar e ir al estado 79
    TK_REAL                desplazar e ir al estado 80
    TK_BOOLEANO            desplazar e ir al estado 81
    TK_PR_NO               desplazar e ir al estado 82
    TK_MENOS               desplazar e ir al estado 83

    ty_expresion   ir al estado 100
    ty_exp_a       ir al estado 89
    ty_exp_b       ir al estado 90
    ty_operando    ir al estado 91
    ty_funcion_ll  ir al estado 92


Estado 43

   66 ty_operando: TK_IDENTIFICADOR .
   94 ty_accion_ll: TK_IDENTIFICADOR . TK_PARENTESIS_INICIAL ty_l_ll TK_PARENTESIS_FINAL

    TK_PARENTESIS_INICIAL  desplazar e ir al estado 101

    $default  reduce usando la regla 66 (ty_operando)


Estado 44

   67 ty_operando: ty_operando . TK_PUNTO ty_operando
   68            | ty_operando . TK_INICIO_ARRAY ty_expresion TK_FIN_ARRAY
   69            | ty_operando . TK_PR_REF
   77 ty_asignacion: ty_operando . TK_ASIGNACION ty_expresion_t

    TK_ASIGNACION    desplazar e ir al estado 102
    TK_INICIO_ARRAY  desplazar e ir al estado 103
    TK_PUNTO         desplazar e ir al estado 104
    TK_PR_REF        desplazar e ir al estado 105


Estado 45

   10 ty_bloque: ty_declaraciones ty_instrucciones .

    $default  reduce usando la regla 10 (ty_bloque)


Estado 46

   70 ty_instrucciones: ty_instruccion . TK_PUNTOYCOMA ty_instrucciones
   71                 | ty_instruccion .

    TK_PUNTOYCOMA  desplazar e ir al estado 106

    $default  reduce usando la regla 71 (ty_instrucciones)


Estado 47

   73 ty_instruccion: ty_asignacion .

    $default  reduce usando la regla 73 (ty_instruccion)


Estado 48

   74 ty_instruccion: ty_alternativa .

    $default  reduce usando la regla 74 (ty_instruccion)


Estado 49

   75 ty_instruccion: ty_iteracion .

    $default  reduce usando la regla 75 (ty_instruccion)


Estado 50

   82 ty_iteracion: ty_it_cota_exp .

    $default  reduce usando la regla 82 (ty_iteracion)


Estado 51

   81 ty_iteracion: ty_it_cota_fija .

    $default  reduce usando la regla 81 (ty_iteracion)


Estado 52

   76 ty_instruccion: ty_accion_ll .

    $default  reduce usando la regla 76 (ty_instruccion)


Estado 53

   11 ty_declaraciones: ty_decl_tipo ty_declaraciones .

    $default  reduce usando la regla 11 (ty_declaraciones)


Estado 54

   12 ty_declaraciones: ty_decl_cte ty_declaraciones .

    $default  reduce usando la regla 12 (ty_declaraciones)


Estado 55

   13 ty_declaraciones: ty_decl_var ty_declaraciones .

    $default  reduce usando la regla 13 (ty_declaraciones)


Estado 56

   87 ty_a_cabecera: TK_IDENTIFICADOR . TK_PARENTESIS_INICIAL ty_d_par_form TK_PARENTESIS_FINAL TK_PUNTOYCOMA

    TK_PARENTESIS_INICIAL  desplazar e ir al estado 107


Estado 57

   85 ty_accion_d: TK_PR_ACCION ty_a_cabecera . ty_bloque TK_PR_FACCION

    TK_PR_CONST  desplazar e ir al estado 6
    TK_PR_TIPO   desplazar e ir al estado 7
    TK_PR_VAR    desplazar e ir al estado 16

    $default  reduce usando la regla 14 (ty_declaraciones)

    ty_bloque         ir al estado 108
    ty_declaraciones  ir al estado 19
    ty_decl_tipo      ir al estado 20
    ty_decl_cte       ir al estado 21
    ty_decl_var       ir al estado 22


Estado 58

   88 ty_f_cabecera: TK_IDENTIFICADOR . TK_PARENTESIS_INICIAL ty_lista_d_var TK_PARENTESIS_FINAL TK_PR_DEV ty_d_tipo TK_PUNTOYCOMA

    TK_PARENTESIS_INICIAL  desplazar e ir al estado 109


Estado 59

   86 ty_funcion_d: TK_PR_FUNCION ty_f_cabecera . ty_bloque TK_PR_DEV ty_expresion TK_PR_FFUNCION

    TK_PR_CONST  desplazar e ir al estado 6
    TK_PR_TIPO   desplazar e ir al estado 7
    TK_PR_VAR    desplazar e ir al estado 16

    $default  reduce usando la regla 14 (ty_declaraciones)

    ty_bloque         ir al estado 110
    ty_declaraciones  ir al estado 19
    ty_decl_tipo      ir al estado 20
    ty_decl_cte       ir al estado 21
    ty_decl_var       ir al estado 22


Estado 60

   44 ty_decl_ent: TK_PR_ENT . ty_lista_d_var

    TK_IDENTIFICADOR  desplazar e ir al estado 34

    $default  reduce usando la regla 38 (ty_lista_d_var)

    ty_lista_d_var  ir al estado 111
    ty_lista_id     ir al estado 36


Estado 61

   45 ty_decl_sal: TK_PR_SAL . ty_lista_d_var

    TK_IDENTIFICADOR  desplazar e ir al estado 34

    $default  reduce usando la regla 38 (ty_lista_d_var)
